# backup-app

./: index.html  package-lock.json  package.json  vite.config.ts
migrations/: 000_all.sql  001_profiles.sql  002_projects.sql  003_snapshots.sql  004_file_records.sql  005_blob_references.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  errors.rs  lib.rs
src-tauri/src/api/: b2.rs  config.rs  mod.rs  supabase.rs
src-tauri/src/crypto/: cipher.rs
src-tauri/src/db/: local.rs  mod.rs
src-tauri/src/download/: cache.rs  mod.rs  restore.rs
src-tauri/src/hasher/: directory.rs  mod.rs  sha256.rs
src-tauri/src/sync/: conflict.rs  dedup.rs  engine.rs  mod.rs  snapshot.rs
src-tauri/src/upload/: chunked.rs  mod.rs  queue.rs  retry.rs  worker.rs
src-tauri/src/watcher/: debouncer.rs  exclude.rs  mod.rs  monitor.rs
src/components/Auth/: AuthScreen.tsx
src/components/Layout/: AppShell.tsx
src/components/Onboarding/: OnboardingFlow.tsx
src/components/ProjectList/: AddProjectDialog.tsx  ProjectCard.tsx  Sidebar.tsx
src/components/RestoreWizard/: RestoreWizard.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/StatusBar/: GlobalStatusBar.tsx
src/components/VersionHistory/: VersionHistory.tsx
src/hooks/: useAuth.ts  useProjects.ts  useSyncStatus.ts
src/stores/: appStore.ts
src/types/: index.ts
src/utils/: formatters.ts
